--- a/mods/ts/rules/ai.yaml
+++ b/mods/ts/rules/ai.yaml
@@ -105,7 +105,7 @@ Player:
 		ExcludeFromSquadsTypes: harv, mcv, dpod, hunter
 		IgnoredEnemyTargetTypes: Wall, AIgnored
 		ConstructionYardTypes: gacnst
-		AirUnitsTypes: orca, orcab, scrin, apache, jumpjet
+		AirUnitsTypes: orca, orcab, scrin, apache, jumpjetair
 		ProtectionTypes: gapowr, gapowrup, gapile, gaweap, gahpad, gadept, garadr, gatech, gaplug, gagate_a, gagate_b, gactwr, gavulc, garock, gacsam, titanugvulcan, titanugmissile, napowr, naapwr, nahand, naweap, nahpad, naradr, natech, nastlh, natmpl, namisl, nawast, nagate_a, nagate_b, nalasr, naobel, nasam, weed, gacnst, proc, gasilo, napuls, mcv, harv
 		MinimumAttackForceDelay: 2500
 		AssignRolesInterval: 73
@@ -114,7 +114,7 @@ Player:
 		ProtectionScanRadius: 15
 		SuggestedGroundLeaderLocomotor: foot, wheeled, heavywheeled, tracked, critter, visceroid, smallvisc
 		SuggestedNavyLeaderLocomotor: Naval
-		GuerrillaTypes: smech, bggy, jumpjet, hvr, bike, subtank, stnk
+		GuerrillaTypes: smech, bggy, jumpjetair, hvr, bike, subtank, stnk
 	UnitBuilderBotModule@test:
 		RequiresCondition: enable-test-ai
 		UnitQueues: Vehicle, Infantry, Air
@@ -124,7 +124,7 @@ Player:
 			e3: 30
 			cyborg: 30
 			weedguy: 12
-			jumpjet: 15
+			jumpjetair: 15
 			ghost: 4
 			cyc2: 4
 			repair: 2
