--- a/mods/ts/weapons/smallguns.yaml
+++ b/mods/ts/weapons/smallguns.yaml
@@ -251,6 +251,10 @@ JumpVulcan:
 			Concrete: 10
 		DamageTypes: Prone70Percent, TriggerProne, BulletDeath
 
+JumpVulcanGround:
+	Inherits: JumpVulcan
+	ValidTargets: Ground, Water
+
 # harpy machine gun
 HarpyClaw:
 	Inherits: ^Vulcan
