化学飞弹大改

--- a/mods/ts/weapons/missiles.yaml
+++ b/mods/ts/weapons/missiles.yaml
@@ -406,7 +406,7 @@ ProtonFlameMissile:
 			Heavy: 75
 			Concrete: 60
 	Warhead@Cluster: FireCluster
-		Weapon: GreenFireballLauncher
+		Weapon: ChemicalCloudLauncher
 		RandomClusterCount: 35
 		Dimensions: 7,7
 		Footprint: __xxx__ _xxXxx_ xxxxxxx xXx_xXx xxxxxxx _xxXxx_ __xxx__
