--- a/mods/ts/weapons/missiles.yaml
+++ b/mods/ts/weapons/missiles.yaml
@@ -397,6 +397,7 @@ ProtonFlameMissile:
 	Projectile: Missile
 		ContrailStartColor: 00FF00
 		ContrailStartColorOuter: AAAA00
+		AirburstAltitude: 1c0
 	Warhead@1Dam: SpreadDamage
 		Damage: 6000
 		Versus:
@@ -406,7 +407,7 @@ ProtonFlameMissile:
 			Heavy: 75
 			Concrete: 60
 	Warhead@Cluster: FireCluster
-		Weapon: ChemicalCloudLauncher
+		Weapon: GreenFireballLauncher
 		RandomClusterCount: 35
 		Dimensions: 7,7
 		Footprint: __xxx__ _xxXxx_ xxxxxxx xXx_xXx xxxxxxx _xxXxx_ __xxx__
