--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -401,8 +401,9 @@ TRNSPORT:
 	Aircraft:
 		TurnSpeed: 20
 		Speed: 149
-		Pitch: 0
-		Roll: 0
+		# Pitch: 0
+		# Roll: 0
+		Roll: 16
 		TakeoffSounds: dropup1.aud
 		LandingSounds: dropdwn1.aud
 	Carryall:
