关闭carryall的倾斜，防止产生无法降落的sbbug

--- a/mods/ts/mod.yaml
+++ b/mods/ts/mod.yaml
@@ -74,11 +74,11 @@ Packages:
 	ts|skeletons
 	ts|3dtest
 	
-	ts|tstest
-	ts|tstest/asset
-	ts|tstest/asset/mat
-	ts|tstest/asset/audios
-	ts|tstest/asset/anims
+	# ts|tstest
+	# ts|tstest/asset
+	# ts|tstest/asset/mat
+	# ts|tstest/asset/audios
+	# ts|tstest/asset/anims
 
 
 MapFolders:
@@ -115,7 +115,7 @@ Rules:
 
 	ts|3dtest/testrulse.yaml
 
-	ts|tstest/localtestrulse.yaml
+	# ts|tstest/localtestrulse.yaml
 
 Weapons:
 	ts|weapons/ballisticweapons.yaml
@@ -127,7 +127,7 @@ Weapons:
 	ts|weapons/smallguns.yaml
 	ts|weapons/superweapons.yaml
 	
-	ts|tstest/localtestweapon.yaml
+	# ts|tstest/localtestweapon.yaml
 
 Sequences:
 	ts|sequences/aircraft.yaml
@@ -140,7 +140,7 @@ Sequences:
 	ts|sequences/bridges.yaml
 	ts|sequences/critters.yaml
 
-	ts|tstest/localtestseq.yaml
+	# ts|tstest/localtestseq.yaml
 
 ModelSequences:
 	ts|sequences/voxels.yaml
@@ -148,7 +148,7 @@ ModelSequences:
 MeshSequences:
 	ts|3dtest/meshes.yaml
 
-	ts|tstest/localtestmes.yaml
+	# ts|tstest/localtestmes.yaml
 
 TileSets:
 	ts|tilesets/temperate.yaml
@@ -239,7 +239,7 @@ Translations:
 Voices:
 	ts|audio/voices.yaml
 
-	ts|tstest/localtestvoices.yaml
+	# ts|tstest/localtestvoices.yaml
 
 Notifications:
 	ts|audio/speech-generic.yaml
